--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,28 @@
-# This is a basic workflow to help you get started with Actions
+# This is a simple workflow that runs the publisher and copies the output to https://<owner>.github.io/<repo>/index.html
+# Based on the instructions from Elliot Silver, available from: https://www.argentixinfo.com/archives/156
+# Make sure your repo has a branch called gh-pages
+
+
+# Update 15-Jan-2021: This now adds a FTP upload feature. This uses a repository secret.
+# Action documentation
+# https://github.com/marketplace/actions/ftp-deploy
 
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Controls when the action will run. 
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch and any other indicated branches
   push:
-    branches: [ main ]
+    branches: 
+      - main
+      - master
   pull_request:
-    branches: [ main ]
+    branches: 
+      - main
+      - master  
+
+  # Allows you to run this workflow manually from the Actions tabs
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -16,29 +30,45 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-     
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-#      - name: Update the image to the latest publisher
-#        uses: docker://hl7fhir/ig-publisher-base:latest
-#        with:
-#          args: ./_updatePublisher.sh --force
-
-      - name: Run sushi to generate the ig.ini file
+      - uses: actions/checkout@v2
+      - name: Update the image to the latest publisher
         uses: docker://hl7fhir/ig-publisher-base:latest
         with:
-          args: sushi
+          # Get the latest publisher - don't run the batch script but run the line directly
+          args: curl -L https://github.com/HL7/fhir-ig-publisher/releases/download/1.2.22/publisher.jar -o ./input-cache/publisher.jar --create-dirs
 
       - name: Run the IG publisher
         uses: docker://hl7fhir/ig-publisher-base:latest
         with:
-          args: ./_genonce.sh -no-sushi
-          
+          # Run the publisher - don't run the batch script but run the line directly
+          args: java -jar ./input-cache/publisher.jar publisher -ig .
+
+      - run: sed -i 's/\(<!--\s*ReleaseHeader\s*-->\s*<p id="publish-box">\).*v\([0-9]*\.[0-9]*\.[0-9]*\).*\(<\/p>\s*<!--\s*EndReleaseHeader\s*-->\)/\1This is the continuous build for version \2. This version is based on the current content of <a href="https:\/\/github.com\/WorldHealthOrganization\/ddcc">https:\/\/github.com\/WorldHealthOrganization\/ddcc<\/a> and changes regularly.\3/' ./output/*.html
+
+      # deploy with output directory indicated by the tag or branch that triggered this workflow
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./output
+          destination_dir: ${{ github.ref }}
+          keep_files: true
+         #force_orphan: true
+
+      # if it is the main branch, deploy to main directory
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.ref == 'refs/heads/main' || github.ref =='refs/heads/master' }} 
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./output
+          keep_files: true
+         #force_orphan: true
+
+
+#      - name: 🚚 Get latest code
+#        uses: actions/checkout@v2.3.2
