--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -84,7 +84,14 @@ menu:
   Operaciones: Operaciones.html
   Terminologias: Terminologias.html
   Especificaciones Técnicas:
+    Eventos: Eventos.html
     Evento Inicio: EventoInicio.html
+    Evento Referenciada: EventoReferenciada.html
+    Evento Revisar: EventoRevisar.html
+    Evento Agendar: EventoAgendar.html
+    Evento Atender: EventoAtender.html
+    Evento Terminar: EventoTerminar.html
+    
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
 # │  resource. These properties are less commonly needed than those above.                         │
