Update: evento inicio y creación de pagina priorizar

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -88,6 +88,7 @@ menu:
     Evento Inicio: EventoInicio.html
     Evento Referenciada: EventoReferenciada.html
     Evento Revisar: EventoRevisar.html
+    Evento Priorizar: EventoPriorizar.html
     Evento Agendar: EventoAgendar.html
     Evento Atender: EventoAtender.html
     Evento Terminar: EventoTerminar.html
