add: página de información de mensajería

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -84,6 +84,7 @@ menu:
   Operaciones: Operaciones.html
   Terminologias: Terminologias.html
   Especificaciones Técnicas:
+    Mensajería: Mensajeria.html
     Eventos: Eventos.html
     Evento Inicio: EventoInicio.html
     Evento Referenciada: EventoReferenciada.html
