cambios en los binding mas cambios sugeridos

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,7 +3,7 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: fhir.hl7chile.ListaDeEspera
+id: fhir.minsal.ListaDeEspera
 canonical: http://minsal.cl/listaespera
 name: ListaEsperaChile
 title: Proyecto Listas de Espera MINSAL CHILE
