--- a/ig.ini
+++ b/ig.ini
@@ -1,4 +1,4 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-fhir.hl7chile.ListaDeEspera.json
+ig = fsh-generated/resources/ImplementationGuide-fhir.minsal.ListaDeEspera.json
 #template = fhir.base.template#current
 template = hl7chile-ig-template
