--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -9,7 +9,7 @@ name: ListaEsperaChile
 title: Proyecto Listas de Espera MINSAL CHILE
 description: Proyecto Listas de Espera MINSAL CHILE
 status: draft # draft | active | retired | unknown
-version: 0.1.1
+version: 0.2.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2023+
 releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
@@ -77,12 +77,13 @@ dependencies:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  Artefactos: artifacts.html
+  Alcance: Alcance.html
+  Objetivos: Objetivos.html
   Actores: Actores.html
   Casos de Uso: Casosdeuso.html
-  Objetivos: Objetivos.html
   Operaciones: Operaciones.html
   Terminologias: Terminologias.html
+  Artefactos: artifacts.html
   Especificaciones Técnicas:
     Mensajería: Mensajeria.html
     Eventos: Eventos.html
