fix: evento agendar y correcciones de nombres

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -87,8 +87,8 @@ menu:
   Especificaciones Técnicas:
     Mensajería: Mensajeria.html
     Eventos: Eventos.html
-    Evento Inicio: EventoInicio.html
-    Evento Referenciada: EventoReferenciada.html
+    Evento Iniciar: EventoIniciar.html
+    Evento Referenciar: EventoReferenciar.html
     Evento Revisar: EventoRevisar.html
     Evento Priorizar: EventoPriorizar.html
     Evento Agendar: EventoAgendar.html
