add: ejemplos para evento agendar.

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -80,7 +80,7 @@ menu:
   Alcance: Alcance.html
   Objetivos: Objetivos.html
   Actores: Actores.html
-  Casos de Uso: Casosdeuso.html
+  Casos de Uso: CasosDeUso.html
   Operaciones: Operaciones.html
   Terminologias: Terminologias.html
   Artefactos: artifacts.html
