update: parcial evento inicio

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -31,6 +31,7 @@ dependencies:
   #  uri: https://hl7chile.cl/fhir/ig/CoreCL/1.7.0/
   #  version: 1.7.0
   hl7.fhir.cl.corecl: 1.7.0
+  #hl7.fhir.cl.minsal.mpi: 0.1.0
 #
 #
 # The pages property corresponds to IG.definition.page. SUSHI can
