--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -30,7 +30,8 @@ dependencies:
   #  id: hl7.fhir.cl.corecl
   #  uri: https://hl7chile.cl/fhir/ig/CoreCL/1.7.0/
   #  version: 1.7.0
-  hl7.fhir.cl.corecl: 1.7.0
+  #hl7.fhir.cl.corecl: 1.7.0
+  hl7.fhir.cl.clcore: 1.8.1
   #hl7.fhir.cl.minsal.mpi: 0.1.0
 #
 #
