Se agregan textos

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -5,9 +5,9 @@
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: fhir.minsal.ListaDeEspera
 canonical: http://minsal.cl/listaespera
-name: ListaEsperaChile
-title: Proyecto Listas de Espera MINSAL CHILE
-description: Proyecto Listas de Espera MINSAL CHILE
+name: ListaTiemposDeEspera
+title: Proyecto Tiempos de Espera Interoperables MINSAL CHILE
+description: Proyecto Tiempos de Espera Interoperables MINSAL CHILE
 status: draft # draft | active | retired | unknown
 version: 0.1.4
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
@@ -16,8 +16,8 @@ releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | re
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
-  name: MINSAL Chile
-  url: https://minsal.cl
+  name: CENS CHILE
+  url: https://cens.cl
   # email: test@example.org
 
 # The dependencies property corresponds to IG.dependsOn. The key is the
@@ -79,10 +79,7 @@ dependencies:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  Alcance: Alcance.html
-  Objetivos: Objetivos.html
-  Actores: Actores.html
-  Casos de Uso: CasosDeUso.html
+  Negocio: negocio.html
   Operaciones: Operaciones.html
   Terminologias: Terminologias.html
   Artefactos: artifacts.html
