se corrige carga de html

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -79,7 +79,7 @@ dependencies:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  Negocio: negocio.html
+  Negocio: Negocio.html
   Operaciones: Operaciones.html
   Terminologias: Terminologias.html
   Artefactos: artifacts.html
