nueva estructura de transacciones

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -9,7 +9,7 @@ name: ListaTiemposDeEspera
 title: Proyecto Tiempos de Espera Interoperables MINSAL CHILE
 description: Proyecto Tiempos de Espera Interoperables MINSAL CHILE
 status: draft # draft | active | retired | unknown
-version: 0.1.4
+version: 0.1.5
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2023+
 releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
@@ -79,20 +79,17 @@ dependencies:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  Negocio: negocio.html
+  Negocio: Negocio.html
   Operaciones: Operaciones.html
   Terminologias: Terminologias.html
   Artefactos: artifacts.html
   Especificaciones Técnicas:
-    Mensajería: Mensajeria.html
+    
     Eventos: Eventos.html
-    Evento Iniciar: EventoIniciar.html
-    Evento Referenciar: EventoReferenciar.html
-    Evento Revisar: EventoRevisar.html
-    Evento Priorizar: EventoPriorizar.html
-    Evento Agendar: EventoAgendar.html
-    Evento Atender: EventoAtender.html
-    Evento Terminar: EventoTerminar.html
+    Transacciones: Transacciones.html
+    Perfiles: artifacts.html#structures-resource-profiles
+    Mensajería: Mensajeria.html
+    Consideraciones Adicionales: ConsideracionesAdionales.html
     
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
