--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -79,10 +79,7 @@ dependencies:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  Negocio: Negocio.html
-  Operaciones: Operaciones.html
-  Terminologias: Terminologias.html
-  Artefactos: artifacts.html
+  Especificación de Negocio: Negocio.html
   Especificaciones Técnicas:
     
     Eventos: Eventos.html
@@ -90,7 +87,8 @@ menu:
     Perfiles: artifacts.html#structures-resource-profiles
     Mensajería: Mensajeria.html
     Consideraciones Adicionales: ConsideracionesAdionales.html
-    
+  Terminologías: Terminologias.html
+  Artefactos: artifacts.html
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
 # │  resource. These properties are less commonly needed than those above.                         │
