--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,21 +3,22 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: fhir.minsal.ListaDeEspera
-canonical: http://minsal.cl/listaespera
-name: ListaTiemposDeEspera
-title: Proyecto Tiempos de Espera Interoperables MINSAL CHILE
-description: Proyecto Tiempos de Espera Interoperables MINSAL CHILE
+id: hl7.fhir.cl.minsal.tiemposdeesperainteroperables
+canonical: https://interoperabilidad.minsal.cl/fhir/ig/tiemposdeesperainteroperables
+name: Tiempos de Espera Interoperables
+title: Tiempos de Espera Interoperables
+description: Tiempos de Espera Interoperables
 status: draft # draft | active | retired | unknown
 version: 0.1.5
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2023+
-releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
+releaseLabel: draft # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
+jurisdiction: urn:iso:std:iso:3166#CL "Chile"
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
-  name: CENS CHILE
-  url: https://cens.cl
+  name: Unidad de Interoperabilidad - MINSAL
+  url: https://interoperabilidad.minsal.cl
   # email: test@example.org
 
 # The dependencies property corresponds to IG.dependsOn. The key is the
@@ -46,8 +47,15 @@ dependencies:
 # with supported extensions (e.g., .md/.xml) will be treated as
 # sub-pages.
 #
-# pages:
-#   index.md:
+pages:
+  index.md:
+  Negocio.md:
+  Eventos.md:
+  Transacciones.md:
+  Mensajeria.md:
+  ConsideracionesAdionales.md:
+  Terminologias.md:
+
 #     title: Example Home
 #   implementation.xml:
 #   examples.xml:
