--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,11 +3,11 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: hl7.fhir.cl.minsal.tiemposdeesperainteroperables
-canonical: https://interoperabilidad.minsal.cl/fhir/ig/tiemposdeesperainteroperables
-name: Tiempos de Espera Interoperables
-title: Tiempos de Espera Interoperables
-description: Tiempos de Espera Interoperables
+id: hl7.fhir.cl.minsal.tei
+canonical: https://interoperabilidad.minsal.cl/fhir/ig/tei
+name: Tiempos De Espera Interoperable
+title: Tiempos de Espera Interoperable
+description: Tiempos de Espera Interoperable
 status: draft # draft | active | retired | unknown
 version: 0.1.5
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
@@ -53,8 +53,7 @@ pages:
   Eventos.md:
   Transacciones.md:
   Mensajeria.md:
-  ConsideracionesAdionales.md:
-  Terminologias.md:
+    title: Mensajería
 
 #     title: Example Home
 #   implementation.xml:
@@ -94,8 +93,7 @@ menu:
     Transacciones: Transacciones.html
     Perfiles: artifacts.html#structures-resource-profiles
     Mensajería: Mensajeria.html
-    Consideraciones Adicionales: ConsideracionesAdionales.html
-  Terminologías: Terminologias.html
+  Terminologías: artifacts.html#terminology-value-sets
   Artefactos: artifacts.html
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
