update: esp. de negocios como menú desplegable

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -49,11 +49,15 @@ dependencies:
 #
 pages:
   index.md:
-  Negocio.md:
+  workflow.md:
+  eventos_interoperabilidad_CNE.md:
+  rol_de_actores_interoperabilidad_CNE.md:
+  historias_de_usuario_segun_rol.md:
+  diccionario_de_datos.md: 
   Eventos.md:
   Transacciones.md:
+  artifacts.html:
   Mensajeria.md:
-    title: Mensajería
 
 #     title: Example Home
 #   implementation.xml:
@@ -86,9 +90,13 @@ pages:
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  Especificación de Negocio: Negocio.html
+  Especificación de Negocio: 
+    Workflow: workflow.html
+    Eventos Interoperabilidad CNE: eventos_interoperabilidad_CNE.html
+    Rol de Actores Interoperabilidad CNE: rol_de_actores_interoperabilidad_CNE.html
+    Historias de Usuario según rol: historias_de_usuario_segun_rol.html
+    Diccionario de datos: diccionario_de_datos.html
   Especificaciones Técnicas:
-    
     Eventos: Eventos.html
     Transacciones: Transacciones.html
     Perfiles: artifacts.html#structures-resource-profiles
