add: se agrega historial de cambios

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -51,14 +51,14 @@ pages:
   index.md:
   workflow.md:
   eventos_interoperabilidad_CNE.md:
-  rol_de_actores_interoperabilidad_CNE.md:
+  rol_de_actores.md:
   historias_de_usuario_segun_rol.md:
   diccionario_de_datos.md: 
   Eventos.md:
   Transacciones.md:
   artifacts.html:
   Mensajeria.md:
-
+  changes.md:
 #     title: Example Home
 #   implementation.xml:
 #   examples.xml:
@@ -93,7 +93,7 @@ menu:
   Especificación de Negocio: 
     Workflow: workflow.html
     Eventos Interoperabilidad CNE: eventos_interoperabilidad_CNE.html
-    Rol de Actores Interoperabilidad CNE: rol_de_actores_interoperabilidad_CNE.html
+    Rol de Actores: rol_de_actores.html
     Historias de Usuario según rol: historias_de_usuario_segun_rol.html
     Diccionario de datos: diccionario_de_datos.html
   Especificaciones Técnicas:
@@ -103,6 +103,7 @@ menu:
     Mensajería: Mensajeria.html
   Terminologías: artifacts.html#terminology-value-sets
   Artefactos: artifacts.html
+  Historial de Cambios: historial_de_cambios.html
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
 # │  resource. These properties are less commonly needed than those above.                         │
