update: solución de error (cambio de nombre changes.md a historial_de_cambios)

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -58,7 +58,7 @@ pages:
   Transacciones.md:
   artifacts.html:
   Mensajeria.md:
-  changes.md:
+  historial_de_cambios.md:
 #     title: Example Home
 #   implementation.xml:
 #   examples.xml:
