--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -9,9 +9,9 @@ name: Tiempos De Espera Interoperable
 title: Tiempos de Espera Interoperable
 description: Tiempos de Espera Interoperable
 status: draft # draft | active | retired | unknown
-version: 0.1.6
+version: 0.9.1
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
-copyrightYear: 2023+
+copyrightYear: 2024
 releaseLabel: draft # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 jurisdiction: urn:iso:std:iso:3166#CL "Chile"
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
@@ -32,7 +32,7 @@ dependencies:
   #  uri: https://hl7chile.cl/fhir/ig/CoreCL/1.7.0/
   #  version: 1.7.0
   #hl7.fhir.cl.corecl: 1.7.0
-  hl7.fhir.cl.clcore: 1.8.5
+  hl7.fhir.cl.clcore: 1.8.10
   #hl7.fhir.cl.minsal.mpi: 0.1.0
 #
 #
