--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -33,6 +33,7 @@ dependencies:
   #  version: 1.7.0
   #hl7.fhir.cl.corecl: 1.7.0
   hl7.fhir.cl.clcore: dev
+  hl7.fhir.cl.minsal.snre: dev
   #hl7.fhir.cl.clcore: 1.8.11
 #  hl7.fhir.cl.minsal.eis: dev
   #hl7.fhir.cl.minsal.mpi: 0.1.0
