--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -32,7 +32,7 @@ dependencies:
   #  uri: https://hl7chile.cl/fhir/ig/CoreCL/1.7.0/
   #  version: 1.7.0
   #hl7.fhir.cl.corecl: 1.7.0
-  hl7.fhir.cl.clcore: 1.8.11
+  hl7.fhir.cl.clcore: dev
   #hl7.fhir.cl.minsal.snre: dev
   #hl7.fhir.cl.clcore: 1.8.11
 #  hl7.fhir.cl.minsal.eis: dev
