Revisar Historial de cambios

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -56,7 +56,7 @@ pages:
   eventos_interoperabilidad_CNE.md:
   rol_de_actores.md:
   historias_de_usuario_segun_rol.md:
-  diccionario_de_datos.md: 
+  #diccionario_de_datos.md: 
   Eventos.md:
   Transacciones.md:
   artifacts.html:
@@ -98,7 +98,7 @@ menu:
     Eventos Interoperabilidad CNE: eventos_interoperabilidad_CNE.html
     Rol de Actores: rol_de_actores.html
     Historias de Usuario según rol: historias_de_usuario_segun_rol.html
-    Diccionario de datos: diccionario_de_datos.html
+    #Diccionario de datos: diccionario_de_datos.html
   Especificaciones Técnicas:
     Eventos: Eventos.html
     Transacciones: Transacciones.html
