Correción de extensiones

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -158,7 +158,8 @@ menu:
 # look like:
 #
 # resources:
-#   Patient/my-example-patient:
+#   Bundle/EjemploBundleIniciar:
+#     name: EjemploBundleIniciar
 #     name: My Example Patient
 #     description: An example Patient
 #     exampleBoolean: true
