--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -27,15 +27,16 @@ publisher:
 #
 dependencies:
   #   hl7.fhir.us.core: 3.1.0
-  #hl7.fhir.cl.corecl:
-  #  id: hl7.fhir.cl.corecl
-  #  uri: https://hl7chile.cl/fhir/ig/CoreCL/1.7.0/
-  #  version: 1.7.0
+  # hl7.fhir.cl.corecl:
+  #  id: hl7.fhir.cl.clcore
+  #  uri: https://hl7chile.cl/fhir/ig/clcore/
+  #  version: 1.8.12
   #hl7.fhir.cl.corecl: 1.7.0
-  hl7.fhir.cl.clcore: dev
+  #hl7.fhir.cl.clcore: dev
   #hl7.fhir.cl.minsal.snre: dev
-  #hl7.fhir.cl.clcore: 1.8.11
-#  hl7.fhir.cl.minsal.eis: dev
+  hl7.fhir.cl.clcore: 1.8.12
+  #hl7.fhir.cl.clcore: dev
+  #hl7.fhir.cl.minsal.eis: dev
   #hl7.fhir.cl.minsal.mpi: 0.1.0
 #
 #
