--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -34,8 +34,8 @@ dependencies:
   #hl7.fhir.cl.corecl: 1.7.0
   #hl7.fhir.cl.clcore: dev
   #hl7.fhir.cl.minsal.snre: dev
-  hl7.fhir.cl.clcore: 1.8.12
-  #hl7.fhir.cl.clcore: dev
+  #hl7.fhir.cl.clcore: 1.8.12
+  hl7.fhir.cl.clcore: dev
   #hl7.fhir.cl.minsal.eis: dev
   #hl7.fhir.cl.minsal.mpi: 0.1.0
 #
