--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -238,4 +238,4 @@ menu:
 #   Determines for which types of Instances SUSHI will automatically set id
 #   if InstanceOf references a profile:
 #
-#   setId: always # always | standalone-only
+#   setId: always # always | standalone-only y
