--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -9,7 +9,7 @@ name: Tiempos De Espera Interoperable
 title: Tiempos de Espera Interoperable
 description: Tiempos de Espera Interoperable
 status: draft # draft | active | retired | unknown
-version: 0.2.1
+version: 0.2.2
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2024
 releaseLabel: draft # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
@@ -26,14 +26,9 @@ publisher:
 # use cases, the value can be an object with keys for id, uri, and version.
 #
 dependencies:
-  #   hl7.fhir.us.core: 3.1.0
-  # hl7.fhir.cl.corecl:
-  #  id: hl7.fhir.cl.clcore
-  #  uri: https://hl7chile.cl/fhir/ig/clcore/
-  #  version: 1.8.12
-  #hl7.fhir.cl.corecl: 1.7.0
   #hl7.fhir.cl.minsal.snre: dev
-  hl7.fhir.cl.clcore: 1.9.2
+  hl7.fhir.cl.clcore: 1.9.4
+  hl7.fhir.uv.extensions.r4: 5.2.0
   # hl7.terminology.r4: 6.0.2
   # hl7.fhir.uv.extensions.r4: 5.1.0
   #hl7.fhir.cl.clcore: dev
