--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -27,11 +27,11 @@ publisher:
 #
 dependencies:
   #hl7.fhir.cl.minsal.snre: dev
-  #hl7.fhir.cl.clcore: 1.9.4
-  hl7.fhir.uv.extensions.r4: 5.2.0
+  hl7.fhir.cl.clcore: 1.9.4
+  # hl7.fhir.uv.extensions.r4: 5.2.0
   # hl7.terminology.r4: 6.0.2
   # hl7.fhir.uv.extensions.r4: 5.1.0
-  hl7.fhir.cl.clcore: dev
+  # hl7.fhir.cl.clcore: dev
   #hl7.fhir.cl.minsal.eis: dev
   #hl7.fhir.cl.minsal.mpi: 0.1.0
 #
