--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -11,7 +11,7 @@ description: Tiempos de Espera Interoperable
 status: draft # draft | active | retired | unknown
 version: 0.2.2
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
-copyrightYear: 2024
+copyrightYear: 2024+
 releaseLabel: draft # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 jurisdiction: urn:iso:std:iso:3166#CL "Chile"
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
