cambios en los CS de especialidades

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -27,7 +27,7 @@ publisher:
 #
 dependencies:
   #hl7.fhir.cl.minsal.snre: dev
-  hl7.fhir.cl.clcore: dev
+  hl7.fhir.cl.clcore: 1.9.2
   # hl7.fhir.uv.extensions.r4: 5.2.0
   # hl7.terminology.r4: 6.0.2
   # hl7.fhir.uv.extensions.r4: 5.1.0
