actualizar version de la guía de TEI

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -9,7 +9,7 @@ name: Tiempos De Espera Interoperable
 title: Tiempos de Espera Interoperable
 description: Tiempos de Espera Interoperable
 status: draft # draft | active | retired | unknown
-version: 0.2.2
+version: 0.2.2-ballot
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2024+
 releaseLabel: draft # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
@@ -25,6 +25,14 @@ publisher:
 # package id and the value is the version (or dev/current). For advanced
 # use cases, the value can be an object with keys for id, uri, and version.
 #
+
+contact:
+  - name: Franco Ulloa
+    telecom:
+      - system: email
+        value: franco.ulloa@minsal.cl
+        use: work
+        
 dependencies:
   #hl7.fhir.cl.minsal.snre: dev
   hl7.fhir.cl.clcore: 1.9.4
